# thask

./: .gitignore  CMakeLists.txt  LICENSE  README.md
include/: thask.hpp
src/: thask.cpp
